--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<h3>0627412987</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="C:\Users\Utilisateur\Desktop\projet cv\profil\icon enveloppe.jpg">
+					<img class="logo" src="icon enveloppe.jpg">
 					<h3>tony.valentedeo@gmail.fr</h3>
 				</div>
 				<div class="info">
