--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p id="moiparagraphe">Je suis quelqu’un d’assez manuel, je fais du street workout, j’aime boxer et faire du basket et je fais du montage vidéo de mes lives twitch.</p>
 				</div>
 				<div class="info">
-					<img class="logo"src="C:\Users\Utilisateur\Desktop\projet cv\profil\icon tel.png">
+					<img class="logo"src="icon tel.png">
 					<h3>0627412987</h3>
 				</div>
 				<div class="info">
