--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 					<h3>tony.valentedeo@gmail.fr</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="C:\Users\Utilisateur\Desktop\projet cv\profil\icon loc.jpg">
+					<img class="logo" src="icon loc.jpg">
 					<h3>38 rue du mail 49100 Angers</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="C:\Users\Utilisateur\Desktop\projet cv\profil\icon voiture.jpg">
+					<img class="logo" src="icon voiture.jpg">
 					<h3>Permis A2 et B</h3>
 				</div>
 				<br>
