--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
 					<p id="moiparagraphe">Je suis quelqu’un d’assez manuel, je fais du street workout, j’aime boxer et faire du basket et je fais du montage vidéo de mes lives twitch.</p>
 				</div>
 				<div class="info">
-					<img class="logo"src="icon tel.png">
+					<img class="logo"src="profil\icon tel.png">
 					<h3>0627412987</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="icon enveloppe.jpg">
+					<img class="logo" src="
+					profil\icon enveloppe.jpg">
 					<h3>tony.valentedeo@gmail.fr</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="icon loc.jpg">
+					<img class="logo" src="profil\icon loc.jpg">
 					<h3>38 rue du mail 49100 Angers</h3>
 				</div>
 				<div class="info">
-					<img class="logo" src="icon voiture.jpg">
+					<img class="logo" src="profil\icon voiture.jpg">
 					<h3>Permis A2 et B</h3>
 				</div>
 				<br>
