--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPE html> 
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -13,7 +13,7 @@
 			<div id="content-block">
 				<h1>VALENTE DE OLIVEIRA</h1>
 				<h1>Tony</h1>
-				<p id="ego">Polyvalent - Avisé - Créatif</p>
+				<p id="ego">Polyvalent - Aviséeeeeeee - Créatif</p>
 			</div>
 		</header>
 		<section class="container" >
